optimize images and add viewbook icon

--- a/src/html/modules/fixed-cta.html
+++ b/src/html/modules/fixed-cta.html
@@ -15,8 +15,8 @@
       </li>
       <li class="fixed-cta__item">
         <a href="#" class="fixed-cta__link">
-          {{ svg('icon-comment', 'fixed-cta__icon') }}
-          <span class="fixed-cta__label">Contact Us</span>
+          {{ svg('icon-viewbook', 'fixed-cta__icon') }}
+          <span class="fixed-cta__label">Custom Viewbook</span>
         </a>
       </li>
       <li class="fixed-cta__item">
