--- a/src/html/modules/grid-tight-redesign.html
+++ b/src/html/modules/grid-tight-redesign.html
@@ -2,42 +2,42 @@
   <div class="grid grid--tight">
     <a class="card card--outline" href="#">
       <div class="card__image card__image--overlay">
-        <img src="http://kctcs-assets.test/img/stock/xi-wang-vevOKBpCI5E-unsplash.jpg" alt="placeholder">
+        <img src="https://sodev.kctcs.edu/test-delete/xi-wang-vevOKBpCI5E-unsplash.jpg" alt="placeholder">
         <h3 class="card__image__overlay">Advanced Manufacturing</h3>
       </div>
     </a>
 
     <a class="card card--outline" href="#">
       <div class="card__image card__image--overlay">
-        <img src="http://kctcs-assets.test/img/stock/imgix-pgdaAwf6IJg-unsplash.jpg" alt="placeholder">
+        <img src="https://sodev.kctcs.edu/test-delete/imgix-pgdaAwf6IJg-unsplash.jpg" alt="placeholder">
         <h3 class="card__image__overlay">Business & IT</h3>
       </div>
     </a>
 
     <a class="card card--outline" href="#">
       <div class="card__image card__image--overlay">
-        <img src="http://kctcs-assets.test/img/stock/scott-blake-z_p0-CnnpCw-unsplash.jpg" alt="placeholder">
+        <img src="https://sodev.kctcs.edu/test-delete/scott-blake-z_p0-CnnpCw-unsplash.jpg" alt="placeholder">
         <h3 class="card__image__overlay">Construction</h3>
       </div>
     </a>
 
     <a class="card card--outline" href="#">
       <div class="card__image card__image--overlay">
-        <img src="http://kctcs-assets.test/img/stock/hush-naidoo-pA0uoltkwao-unsplash.jpg" alt="placeholder">
+        <img src="https://sodev.kctcs.edu/test-delete/hush-naidoo-pA0uoltkwao-unsplash.jpg" alt="placeholder">
         <h3 class="card__image__overlay">Healthcare</h3>
       </div>
     </a>
 
     <a class="card card--outline" href="#">
       <div class="card__image card__image--overlay">
-        <img src="http://kctcs-assets.test/img/stock/chuttersnap-kyCNGGKCvyw-unsplash.jpg" alt="placeholder">
+        <img src="https://sodev.kctcs.edu/test-delete/chuttersnap-kyCNGGKCvyw-unsplash.jpg" alt="placeholder">
         <h3 class="card__image__overlay">Transportation & Logistics</h3>
       </div>
     </a>
 
     <a class="card card--outline" href="#">
       <div class="card__image card__image--overlay">
-        <img src="http://kctcs-assets.test/img/stock/priscilla-du-preez-XkKCui44iM0-unsplash.jpg" alt="placeholder">
+        <img src="https://sodev.kctcs.edu/test-delete/priscilla-du-preez-XkKCui44iM0-unsplash.jpg" alt="placeholder">
         <h3 class="card__image__overlay">Transfer</h3>
       </div>
     </a>
