--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,6 +12,7 @@
       <li><a href="program.html">Program</a></li>
       <li><a href="gateway.html">Gateway</a></li>
       <li><a href="landing.html">Landing</a></li>
+      <li><a href="stories.html">Stories</a></li>
       <li><a href="home.html">Home</a></li>
       <li><a href="program-finder.html">Program Finder</a></li>
       <li><a href="program-finder-global.html">Program Finder Global</a></li>
