--- a/src/html/stories.html
+++ b/src/html/stories.html
@@ -10,26 +10,19 @@
 
   {% include "modules/breadcrumbs-simple.html" %}
 
-  {% include "modules/split-image.html" %}
-
   <div class="block block--transparent">
     <div class="block__container block__container--narrow">
-      <h3 class="text-center">Next Steps For:</h3>
-      {% include "modules/accordion.html" %}
-      <p class="text-center"><a href="#" class="button">Start Your Application</a></p>
+      <h2 class="text-center">Our Stories Reveal Who We Are</h2>
+      <p class="text-center">
+        Stories transcend generations. They create connections with others. It is through stories
+        that we experience the success of our students and power of education to improve lives.
+      </p>
     </div>
   </div>
 
   <div class="block">
-    <div class="block__container">
-      <h2 class="text-center">In this section</h2>
-      <div class="grid grid--h-center">
-        {% for i in [0, 1, 2, 3, 4] %}
-        {% include "modules/card-large.html" %}
-        {% endfor %}
-      </div>
-      <h3 class="text-center">Information For:</h3>
-      {% include "modules/cta-list.html" %}
+    <div class="block__container flex">
+      {% include "modules/stories/two-card-video.html" %}
     </div>
   </div>
 
