Finish two-card-module

--- a/src/html/modules/stories/two-card-video.html
+++ b/src/html/modules/stories/two-card-video.html
@@ -1,22 +1,51 @@
-<a class="card card--outline" href="#">
+<div class="card card--outline" tabindex="0">
     <div class="card__image">
-        <img src="//placehold.it/768x512" alt="placeholder">
+        <img src="//webassets.kctcs.edu/_assets/clinic-amber.jpg" alt="placeholder">
     </div>
     <div class="card__text-container">
         <h3 class="card__text-name">Amber</h3>
         <p class="card__text-type">Medical Information Technology</p>
     </div>
     <div class="card__overlay-container">
-        div.
+        <h3 class="card__overlay-name">Amber</h3>
+        <p class="card__overlay-type">Medical Information Technology</p>
+        <p class="card__overlay-text">
+            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec sollicitudin molestie malesuada.
+            Vivamus suscipit tortor eget felis porttitor volutpat. Proin eget tortor risus. Cras ultricies ligula sed
+            magna dictum porta. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt.
+            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
+        </p>
+        <button class="flex items-center bg-transparent border-none p-0">
+          <span class="hero__testimonial-link--icon--container">
+            {{ svg('icon-play', 'hero__testimonial-link--icon') }}
+          </span>
+            <span class="hero__testimonial-link--text">Watch the video</span>
+        </button>
     </div>
-</a>
+</div>
 
-<a class="card card--outline" href="#">
+<div class="card card--outline" tabindex="0">
     <div class="card__image">
-        <img src="//placehold.it/768x512" alt="placeholder">
+        <img src="//webassets.kctcs.edu/_assets/jerico-pharmacy.jpg" alt="placeholder">
     </div>
     <div class="card__text-container">
-        <h3 class="card__text-name">Amber</h3>
-        <p class="card__text-type">Medical Information Technology</p>
+        <h3 class="card__text-name">Jerico</h3>
+        <p class="card__text-type">Pharmacy</p>
     </div>
-</a>
+    <div class="card__overlay-container">
+        <h3 class="card__overlay-name">Jerico</h3>
+        <p class="card__overlay-type">Pharmacy</p>
+        <p class="card__overlay-text">
+            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec sollicitudin molestie malesuada.
+            Vivamus suscipit tortor eget felis porttitor volutpat. Proin eget tortor risus. Cras ultricies ligula sed
+            magna dictum porta. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt.
+            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
+        </p>
+        <button class="flex items-center bg-transparent border-none p-0">
+          <span class="hero__testimonial-link--icon--container">
+            {{ svg('icon-play', 'hero__testimonial-link--icon') }}
+          </span>
+            <span class="hero__testimonial-link--text">Watch the video</span>
+        </button>
+    </div>
+</div>
