--- a/src/html/stories.html
+++ b/src/html/stories.html
@@ -26,6 +26,18 @@
     </div>
   </div>
 
+  <div class="block block--transparent">
+    <div class="block__container">
+      <h2 class="text-center">More Stories</h2>
+      <div class="grid-container">
+        <div class="grid grid--tight">
+          {% include "modules/stories/card-image.html" %}
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </main>
 
 {% endblock %}
