Add mobile friendly styles

--- a/src/html/modules/stories/two-card-video.html
+++ b/src/html/modules/stories/two-card-video.html
@@ -1,4 +1,4 @@
-<a class="card card--outline" href="#">
+<div class="card card--outline m-0 md:my-20" tabindex="0">
     <div class="card__image">
         <img src="//webassets.kctcs.edu/_assets/clinic-amber.jpg" alt="placeholder">
     </div>
@@ -15,16 +15,16 @@
             magna dictum porta. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt.
             Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
         </p>
-        <div class="flex items-center bg-transparent border-none p-0">
+        <button class="flex items-center bg-transparent border-none p-0">
           <span class="hero__testimonial-link--icon--container">
             {{ svg('icon-play', 'hero__testimonial-link--icon') }}
           </span>
             <span class="hero__testimonial-link--text">Watch the video</span>
-        </div>
+        </button>
     </div>
-</a>
+</div>
 
-<a class="card card--outline" href="#">
+<div class="card card--outline m-0 mt-16 md:my-20" tabindex="0">
     <div class="card__image">
         <img src="//webassets.kctcs.edu/_assets/jerico-pharmacy.jpg" alt="placeholder">
     </div>
@@ -41,11 +41,11 @@
             magna dictum porta. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt.
             Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
         </p>
-        <div class="flex items-center bg-transparent border-none p-0">
+        <button class="flex items-center bg-transparent border-none p-0">
           <span class="hero__testimonial-link--icon--container">
             {{ svg('icon-play', 'hero__testimonial-link--icon') }}
           </span>
             <span class="hero__testimonial-link--text">Watch the video</span>
-        </div>
+        </button>
     </div>
-</a>
+</div>
