--- a/src/html/stories.html
+++ b/src/html/stories.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="block">
-    <div class="block__container flex">
+    <div class="block__container flex flex-wrap md:flex-no-wrap">
       {% include "modules/stories/two-card-video.html" %}
     </div>
   </div>
@@ -30,7 +30,7 @@
     <div class="block__container">
       <h2 class="text-center">More Stories</h2>
       <div class="grid-container">
-        <div class="grid grid--tight">
+        <div class="grid grid--tight--100">
           {% include "modules/stories/card-image.html" %}
         </div>
       </div>
