--- a/src/html/modules/stories/hero.html
+++ b/src/html/modules/stories/hero.html
@@ -10,7 +10,7 @@
         <p class="hero__testimonial-type">Engineering & Electronic Technology</p>
       </div>
       <div class="hero__testimonial-link--container">
-        <button class="flex items-center bg-transparent border-none p-0">
+        <button class="flex items-center bg-transparent border-none p-0 stories-play-button" data-url="https://www.youtube.com/embed/AN6fDc1Wnu8">
           <span class="hero__testimonial-link--icon--container">
             {{ svg('icon-play', 'hero__testimonial-link--icon') }}
           </span>
