--- a/src/html/modules/stories/two-card-video.html
+++ b/src/html/modules/stories/two-card-video.html
@@ -7,15 +7,17 @@
         <p class="card__text-type">Medical Information Technology</p>
     </div>
     <div class="card__overlay-container">
-        <h3 class="card__overlay-name">Amber</h3>
-        <p class="card__overlay-type">Medical Information Technology</p>
+        <div>
+            <h3 class="card__overlay-name">Amber</h3>
+            <p class="card__overlay-type">Medical Information Technology</p>
+        </div>
         <p class="card__overlay-text">
             Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec sollicitudin molestie malesuada.
             Vivamus suscipit tortor eget felis porttitor volutpat. Proin eget tortor risus. Cras ultricies ligula sed
             magna dictum porta. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt.
             Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
         </p>
-        <button class="flex items-center bg-transparent border-none p-0">
+        <button class="flex items-center bg-transparent border-none p-0 stories-play-button" data-url="https://www.youtube.com/embed/YhFSVCDX06k">
           <span class="hero__testimonial-link--icon--container">
             {{ svg('icon-play', 'hero__testimonial-link--icon') }}
           </span>
@@ -33,15 +35,17 @@
         <p class="card__text-type">Pharmacy</p>
     </div>
     <div class="card__overlay-container">
-        <h3 class="card__overlay-name">Jerico</h3>
-        <p class="card__overlay-type">Pharmacy</p>
+        <div>
+            <h3 class="card__overlay-name">Jerico</h3>
+            <p class="card__overlay-type">Pharmacy</p>
+        </div>
         <p class="card__overlay-text">
             Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Donec sollicitudin molestie malesuada.
             Vivamus suscipit tortor eget felis porttitor volutpat. Proin eget tortor risus. Cras ultricies ligula sed
             magna dictum porta. Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt.
             Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
         </p>
-        <button class="flex items-center bg-transparent border-none p-0">
+        <button class="flex items-center bg-transparent border-none p-0 stories-play-button" data-url="https://www.youtube.com/embed/UauzeYpEJ4w">
           <span class="hero__testimonial-link--icon--container">
             {{ svg('icon-play', 'hero__testimonial-link--icon') }}
           </span>
