--- a/src/html/stories.html
+++ b/src/html/stories.html
@@ -21,8 +21,10 @@
   </div>
 
   <div class="block">
-    <div class="block__container flex flex-wrap md:flex-no-wrap">
-      {% include "modules/stories/two-card-video.html" %}
+    <div class="block__container">
+      <div class="flex flex-wrap md:flex-no-wrap">
+        {% include "modules/stories/two-card-video.html" %}
+      </div>
     </div>
   </div>
 
@@ -33,6 +35,20 @@
         <div class="grid grid--tight--100">
           {% include "modules/stories/card-image.html" %}
         </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="video__modal">
+    <div class="video__modal--flex-container">
+      <div class="video__modal--flex-container">
+        <button class="video__modal--close-button">
+          <span>Close </span>
+          <span class="video__modal--close-button-icon">&times;</span>
+        </button>
+      </div>
+
+      <div class="video__modal--video-container">
       </div>
     </div>
   </div>
