Add viewbook link and check .stories-play-button type to make sure it's not a link

--- a/src/html/stories.html
+++ b/src/html/stories.html
@@ -1,4 +1,4 @@
-{% set page = { title: 'KCTCS Stories', header: 'transparent' } %}
+{% set page = { title: 'Student Stories', header: 'transparent' } %}
 
 {% extends "templates/default.html" %}
 
