--- a/src/html/modules/stories/card-image.html
+++ b/src/html/modules/stories/card-image.html
@@ -1,4 +1,4 @@
-<a class="card card--outline stories-play-button" href="javascript:void(0);" data-url="https://www.youtube.com/embed/-bgxxL0hfpA">
+<a class="card card--outline stories-play-button" href="javascript:void(0);" role="button" data-url="https://www.youtube.com/embed/-bgxxL0hfpA">
     <div class="card__image card__image--overlay">
         <img src="//webassets.kctcs.edu/_assets/office-kenny-sm.jpg" alt="placeholder">
         <span class="card__image__overlay--icon--container">
@@ -9,7 +9,7 @@
     </div>
 </a>
 
-<a class="card card--outline stories-play-button" href="javascript:void(0);" data-url="https://www.youtube.com/embed/PYVEt23KTWg">
+<a class="card card--outline stories-play-button" href="javascript:void(0);" role="button" data-url="https://www.youtube.com/embed/PYVEt23KTWg">
     <div class="card__image card__image--overlay">
         <img src="//webassets.kctcs.edu/_assets/clinic-marlena-sm.jpg" alt="placeholder">
         <span class="card__image__overlay--icon--container">
@@ -20,7 +20,7 @@
     </div>
 </a>
 
-<a class="card card--outline stories-play-button" href="javascript:void(0);" data-url="https://www.youtube.com/embed/UauzeYpEJ4w">
+<a class="card card--outline stories-play-button" href="javascript:void(0);" role="button" data-url="https://www.youtube.com/embed/UauzeYpEJ4w">
     <div class="card__image card__image--overlay">
         <img src="//webassets.kctcs.edu/_assets/jerico-pharmacy-sm.jpg" alt="placeholder">
         <span class="card__image__overlay--icon--container">
@@ -31,7 +31,7 @@
     </div>
 </a>
 
-<a class="card card--outline stories-play-button" href="javascript:void(0);" data-url="https://www.youtube.com/embed/YhFSVCDX06k">
+<a class="card card--outline stories-play-button" href="javascript:void(0);" role="button" data-url="https://www.youtube.com/embed/YhFSVCDX06k">
     <div class="card__image card__image--overlay">
         <img src="//webassets.kctcs.edu/_assets/family-amber-sm.jpg" alt="placeholder">
         <span class="card__image__overlay--icon--container">
@@ -42,7 +42,7 @@
     </div>
 </a>
 
-<a class="card card--outline stories-play-button" href="javascript:void(0);" data-url="https://www.youtube.com/embed/AN6fDc1Wnu8">
+<a class="card card--outline stories-play-button" href="javascript:void(0);" role="button" data-url="https://www.youtube.com/embed/AN6fDc1Wnu8">
     <div class="card__image card__image--overlay">
         <img src="//webassets.kctcs.edu/_assets/factory-bettina-sm.jpg" alt="placeholder">
         <span class="card__image__overlay--icon--container">
@@ -53,13 +53,12 @@
     </div>
 </a>
 
-<a class="card card--outline stories-play-button" href="javascript:void(0);">
+<a class="card card--outline stories-play-button" href="https://mymaysville.kctcs.edu/wizard">
     <div class="card__image card__image--overlay">
         <img src="//placehold.it/768x512" alt="placeholder">
         <span class="card__image__overlay--icon--container">
             {{ svg('icon-play', 'card__image__overlay--icon') }}
         </span>
-        <h3 class="card__image__overlay card__image__overlay--gold">Isabella</h3>
-        <p class="card__image__overlay--text">Hospitality</p>
+        <h3 class="card__image__overlay card__image__overlay--gold">Begin Your Story</h3>
     </div>
 </a>
