--- a/src/html/home-redesign.html
+++ b/src/html/home-redesign.html
@@ -33,25 +33,25 @@
     <div class="w-full flex flex-wrap justify-center">
       <a class="clip-left w-5/12 card m-4" href="#" style="max-height: 300px">
         <div class="card__image card__image--overlay-yellow" style="max-height: 300px">
-          <img src="https://sodev.kctcs.edu/test-delete/annie-spratt-QckxruozjRg-unsplash.jpg" alt="placeholder">
+          <img src="https://demo.kctcs.edu/homepage-redesign/images/annie-spratt-QckxruozjRg-unsplash.jpg" alt="placeholder">
           <h3 class="card__image__overlay text-blue-dark">Affording College</h3>
         </div>
       </a>
       <a class="clip-right w-5/12 card m-4" href="#" style="max-height: 300px">
         <div class="card__image card__image--overlay-yellow" style="max-height: 300px">
-          <img src="https://sodev.kctcs.edu/test-delete/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="placeholder">
+          <img src="https://demo.kctcs.edu/homepage-redesign/images/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="placeholder">
           <h3 class="card__image__overlay text-blue-dark">Tuition & Costs</h3>
         </div>
       </a>
       <a class="clip-right w-5/12 card m-4" href="#" style="max-height: 300px">
         <div class="card__image card__image--overlay-yellow" style="max-height: 300px">
-          <img src="https://sodev.kctcs.edu/test-delete/jeshoots-com--2vD8lIhdnw-unsplash.jpg" alt="placeholder">
+          <img src="https://demo.kctcs.edu/homepage-redesign/images/jeshoots-com--2vD8lIhdnw-unsplash.jpg" alt="placeholder">
           <h3 class="card__image__overlay text-blue-dark">Paying For College</h3>
         </div>
       </a>
       <a class="clip-left w-5/12 card m-4" href="#" style="max-height: 300px">
         <div class="card__image card__image--overlay-yellow" style="max-height: 300px">
-          <img src="https://sodev.kctcs.edu/test-delete/vasily-koloda-8CqDvPuo_kI-unsplash.jpg" alt="placeholder">
+          <img src="https://demo.kctcs.edu/homepage-redesign/images/vasily-koloda-8CqDvPuo_kI-unsplash.jpg" alt="placeholder">
           <h3 class="card__image__overlay text-blue-dark">Net Price Calculator</h3>
         </div>
       </a>
