--- a/src/html/modules/banner.html
+++ b/src/html/modules/banner.html
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner mb-0">
   <div class="banner__container">
     <div class="banner__image">
       <img src="//placehold.it/1920x1280" alt="placeholder">
